fix tag area to allow for overflow.  breaks slick

--- a/app/assets/stylesheets/hearsay.less
+++ b/app/assets/stylesheets/hearsay.less
@@ -152,6 +152,7 @@ h6 {
   overflow-y: hidden;
 }
 
+
 #wrap {
   margin-right: auto;
   margin-left: auto;
@@ -204,10 +205,20 @@ h6 {
 }
 
 .users-carousel {
-  min-height: 55%;
-  max-height: 55%;
+  height: 55%;
 }
 
+.user-profile {
+  height: 100%;
+}
+.connection-scroll-container {
+  padding: 1em;
+  height: 100%;
+  overflow: scroll;
+}
+.connection-scroll-container * {
+  overflow: hidden;
+}
 .tag-carousel {
   min-height: 45%;
   max-height: 45%;
@@ -253,4 +264,6 @@ h6 {
 }
 .home-info {
   margin: 1em;
+}
+.connection-scroll-container {
 }
